# poirot

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  algo.txt  base.ml  blind.ml  blind_api.ml  clean.ml  compare.py  dune-project  fuzzer  fuzzer_api.ml  generateBash.sh  index.html  injectPIN.sh  lexerbnf.mll  main.ml  nettoyage.ml  parser.ml  parserbnf.mly  poirot.opam  poirot.sh  poirot_whitebox.sh  quotient.ml  quotient_api.ml  reconstruct.ml  stats.py
antlr4-to-bnf/: ANTLRv4Lexer.interp  ANTLRv4Lexer.py  ANTLRv4Parser.py  ANTLRv4ParserListener.py  ANTLRv4ParserListenerIntf.py  ListenerForBNF.py  Main.py  Makefile  README.md  SQLite.g4  antlr4-oracle.py  main.py  msg_exec.g4
antlr4-utils/: ListenerForBNF.py  Makefile  MySqlLexer.diff  MySqlParser.diff  PhpLexer.diff  PhpParser.diff  SQLite.diff  XMLLexer.diff  XMLParser.diff  XMLexample.g4  antlr4-oracle.py  antlr4-to-bnf.py  is_in_language.sh  mime.g4  msg_execLexer.py  msg_execParser.py  parenthesis.g4  parenthesisLexer.py  parenthesisParser.py
bnf_grammars/: MySql.bnf  PHP.bnf  SQLite.bnf  XML.bnf  XMLexample.bnf  html.bnf  ldap.bnf  mime.bnf  msg_exec.bnf  ours.bnf  parenthesis.bnf  sql.bnf
bnf_grammars/toy/: parenthesis.bnf
docs/: HOWTO.antlr4
examples/: dune  fuzzer_example.ml  poirot_example.ml  quotient_example.ml
grammaires/: anxbn.gr  bash.gr  grammaire1.gr  grammaire2.gr  grammaire3.gr  ours.gr  pin.gr  sql.gr  sql.gr.bck  sql2.gr  testeps.gr
lib/: clean.ml  dune  fuzzer.ml  grammar.ml  grammar_io.ml  inference.ml  inference.mli  lexerbnf.mll  log.ml  oracle.ml  oracle.mli  parserbnf.mly  poirot.ml  poirot.mli  quotient.ml  quotient.mli  rec_quotient.ml
ocaml/: Makefile  base.ml  blind.ml  blind2.ml  blind_api.ml  clean.ml  fuzzer.ml  fuzzer_api.ml  gfuzz.ml  grammar.ml  grammar_io.ml  inference.ml  inference_api.ml  lexerbnf.mll  nettoyage.ml  oracle.ml  parserbnf.mly  quotient.ml  quotient_api.ml  rec_blind_api.ml  rec_quotient.ml  tree_fuzzer.ml
old/: argparse.py  injectBash.py  injectSQL.sh  injection.py  requetebash.req  requetes.req
old/python/: decoupe.py
oracles/: prefix-suffix.py  sql.sh  sql_rootme.sh
oracles/LDAP/: README.md  access_bypass.py  oracle_ldap.sh  remove_entry.py  setup.py
oracles/SQL/: README.md  sqloracl.py
poirot/: Makefile  clean.ml  fuzzer.ml  grammar.ml  grammar_io.ml  index.html  inference.ml  lexerbnf.mll  oracle.ml  parserbnf.mly  poirot.ml  poirot.opam  poirot_inference.ml  poirot_quotient.ml  quotient_api.ml  rec_quotient.ml  tree_fuzzer.ml
poirot/Poirot/: index.html
poirot/Poirot__/: index.html
poirot/Poirot__/Clean/: index.html
poirot/Poirot__/Grammar/: index.html
poirot/Poirot__/Grammar_io/: index.html
poirot/Poirot__/Inference/: index.html
poirot/Poirot__/Lexerbnf/: index.html
poirot/Poirot__/Lexerconf/: index.html
poirot/Poirot__/Oracle/: index.html
poirot/Poirot__/Parserbnf/: index.html
poirot/Poirot__/Rec_quotient/: index.html
poirot/Poirot__/Tree_fuzzer/: index.html
poirot/Poirot__Clean/: index.html
poirot/Poirot__Grammar/: index.html
poirot/Poirot__Grammar_io/: index.html
poirot/Poirot__Inference/: index.html
poirot/Poirot__Lexerbnf/: index.html
poirot/Poirot__Lexerconf/: index.html
poirot/Poirot__Oracle/: index.html
poirot/Poirot__Parserbnf/: index.html
poirot/Poirot__Quotient/: index.html
poirot/Poirot__Rec_quotient/: index.html
poirot/Poirot__Tree_fuzzer/: index.html
poirot/examples/: bnf2antlr4.ml  dune  fuzzer_example.ml  poirot_example.ml  quotient_example.ml
poirot/js/: dune  index.html  js_poirot.ml
poirot/lib/: Makefile  clean.ml  dune  fuzzer.ml  grammar.ml  grammar_io.ml  inference.ml  lexerbnf.mll  lexerconf.mll  oracle.ml  parserbnf.mly  poirot.ml  poirot.mli  rec_quotient.ml  test_fuzzer.ml  test_inference.ml  test_quotient  test_quotient.ml  tree_fuzzer.ml
python/: injection_aleatoire.py
src/: dune  fuzzer_poirot.ml  poirot.ml  quotient_poirot.ml  whitebox_poirot.ml
