opam-version: "2.0"
name: "poirot"
version: "0.2"
synopsis: "Grammar-based injection fuzzer for black box systems"
maintainer: "Pierre-François Gimenez <pierre-francois.gimenez@laas.fr>"
authors: "Pierre-François Gimenez <pierre-francois.gimenez@laas.fr>"
license: "MIT"
homepage: "https://github.com/PFGimenez/poirot"
bug-reports: "https://github.com/PFGimenez/poirot/issues"
dev-repo: "git+https://github.com/PFGimenez/poirot"
depends: [
    "ocaml" {>= "4.08.1"}
    "menhir" {build}
    "dune"
    "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
