(executable
    (name poirot)
    (public_name poirot)
    (modules poirot)
    (libraries poirot logs.fmt))

(executable
    (name whitebox_poirot)
    (public_name whitebox_poirot)
    (modules whitebox_poirot)
    (libraries poirot))

(executable
    (name bnf2antlr4)
    (public_name bnf2antlr4)
    (modules bnf2antlr4)
    (libraries poirot))
