(executable
    (name js_poirot)
    (modules js_poirot)
    (modes byte)
    (libraries poirot)
    (preprocess (pps js_of_ocaml-ppx)))

(rule
  (targets js_poirot.js)
  (action
    (run %{bin:js_of_ocaml} --noruntime %{lib:js_of_ocaml-compiler:runtime.js}
         --source-map %{dep:js_poirot.bc} -o %{targets} --pretty)))

(alias
  (name default)
  (deps js_poirot.js index.html))
